# irom-tpu-tools-prpl

./: PRPL_ADMIN.md  PRPL_USER.md  README.md  WORKLOG.md
contrib/: prpl-quota.sh
contrib/systemd/: irom-tpu-scheduler.service
examples/tpu-smoke-test/: README.md  pyproject.toml  train.py
src/irom_tpu_tools/: cli.py  ssh.py  tpu.py  watch.py
src/irom_tpu_tools/queue/: backend.py  cli.py  config.py  interactive.py  resources.yaml  scheduler.py  startup_script.py  types.py
tests/: test_queue_scheduler.py
